<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:id="@+id/padre"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_email_black_18"
        android:drawablePadding="5dp"
        android:id="@+id/email_et"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"

        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_btn"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_btn"
            android:layout_height="wrap_content" />

    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">
    <Switch
        android:layout_gravity="bottom"
        android:id="@+id/onOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Spegni La Luce" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:id="@+id/dark_mode_switch"
            android:text="@string/dark_mode"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>